SERVER-82447 Restrict project and addFields pushdown before unpack if an expression depends on the whole document

(cherry picked from commit 0d000e66178ce2e1c4a25da246d662e4939ac179)